# idiomatic-py

./: .envrc  .gitmodules  AGENTS.md  Makefile  README.md  justfile  pyproject.toml
docs/: LOCKS.md  RAMP1_PTPYTHON.md
layouts/: cbia-bash.kdl  cbia.kdl
operators/: __init__.py  core_ops.py  errors.py  io_json.py
playground/: __init__.py
playground/ramp1/: __init__.py  purity_harness.py  run.py
ssot-input/: course.json  references.json
ssot-input/content/: co-01-python-core-for-operators-drill.json  co-01-python-core-for-operators-theory.json  co-02-typed-boundary-contracts-drill.json  co-02-typed-boundary-contracts-theory.json  co-03-pydantic-contract-layer-drill.json  co-03-pydantic-contract-layer-theory.json  co-04-repo-structure-and-import-discipline-drill.json  co-04-repo-structure-and-import-discipline-theory.json  co-05-cli-orchestration-with-typer-drill.json  co-05-cli-orchestration-with-typer-theory.json  co-06-content-generation-layer-drill.json  co-06-content-generation-layer-theory.json  co-07-verification-and-tooling-drill.json  co-07-verification-and-tooling-theory.json
tests/: test_ramp1_purity.py
